fix horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   justify-content: space-between;
   height: 5.938rem;
   margin: 0 0 2.375rem;
-  padding: 1.438rem 6.188rem 1.688rem 6.25rem;
+  padding: 1.438rem 6.188rem 1.688rem 4.25rem;
   background-color: #fff;
   box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
 }
@@ -78,8 +78,6 @@ body {
 .links {
   display: flex;
   flex-direction: row;
-  gap: 2rem;
-  margin-left: 3rem;
 }
 
 .links a {
@@ -263,7 +261,7 @@ button {
 
 .inner--form {
   display: grid;
-  grid-template-columns: 3fr 1fr 1fr 1fr;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
   flex-direction: row;
   gap: 1.5rem;
 }
@@ -290,7 +288,7 @@ input {
 }
 
 .dropdown {
-  width: 450px;
+  width: 150px;
   border-radius: 4px;
   border: solid 1px #e8e8e8;
   background-color: #fff;
